--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,17 @@
 body {
   margin: 0;
   height: 100vh;
-  background: #efefef;
+  background: white;
   font-family: "Roboto", "Arial", sans-serif;
+}
+
+.popup {
+  position: fixed;
+  left: calc(50% - 240px);
+  display: flex;
+  flex-direction: column;
+  box-shadow: 2px 2px 10px rgba(0,0,0,0.19), 3px 5px 3px rgba(0,0,0,0.23);
+  z-index: 999;
+  padding: 25px;
+  width: 480px;
 }
