--- a/src/style.css
+++ b/src/style.css
@@ -5,13 +5,65 @@ body {
   font-family: "Roboto", "Arial", sans-serif;
 }
 
+:root {
+  --material-shadow: 2px 2px 10px rgba(0,0,0,0.19), 3px 5px 3px rgba(0,0,0,0.23);
+}
+
 .popup {
   position: fixed;
   left: calc(50% - 240px);
   display: flex;
   flex-direction: column;
-  box-shadow: 2px 2px 10px rgba(0,0,0,0.19), 3px 5px 3px rgba(0,0,0,0.23);
   z-index: 999;
   padding: 25px;
   width: 480px;
+  box-shadow: var(--material-shadow);
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  height: 50px;
+  border-bottom: 1px solid #cecece;
+  padding-bottom: 10px;
+}
+
+.day-component {
+  display: flex;
+  flex-direction: column;
+}
+
+.day-component input {
+  margin-top: 15px;
+  outline: none;
+  box-shadow: none;
+  border: none;
+  padding: 5px;
+  border-bottom: 1px solid #cecece;
+}
+
+.day-component select {
+  margin-top: 25px;
+}
+
+.day-component input:focus {
+  border-bottom: 1px solid #3F51B5;
+}
+
+.popup-header__close-btn {
+  padding: 5px 10px;
+  border: none;
+  border-radius: 0;
+  outline: none;
+  box-shadow: none;
+  color: #ffffff;
+  background-color: #3F51B5;
+  text-transform: uppercase;
+  box-shadow: var(--material-shadow); 
+  cursor: pointer;
+}
+
+.popup-header__close-btn:hover {
+  background-color: #303F9F;
 }
